--- a/test.html
+++ b/test.html
@@ -1,5 +1,5 @@
 git clone https://github.com/yvaristil/manufacture.git
-cd test-site
+cd manufacture
 echo "<h1>Hello World</h1>" > index.html
 git add .
 git commit -m "Add index.html"
